--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@brandonkal/pptxgenjs",
-  "version": "3.4.0-beta",
+  "version": "3.4.0-beta2",
   "author": {
     "name": "Brent Ely",
     "url": "https://github.com/gitbrent/"
